--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<meta charset="UTF-8">
+
+    <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>共长天云计算有限公司,技术博客,web前端技术,java笔记,nodejs,DevOps进阶之路</title>
   <meta name="description" content="共长天云计算有限公司,技术博客,web前端技术,java笔记,nodejs,DevOps进阶之路" />
@@ -15,6 +14,12 @@
   
   <meta property="og:site_name" content="共长天云计算有限公司">
   <meta property="og:type" content="article" />
+
+<meta data-react-helmet="true" property="og:url" content="https://sabiao.github.io/sit/">
+<meta data-react-helmet="true" name="docusaurus_locale" content="en">
+<meta data-react-helmet="true" name="docusaurus_tag" content="default"><link data-react-helmet="true" rel="icon" href="/sit/img/favicon.ico">
+<link data-react-helmet="true" rel="canonical" href="https://sabiao.github.io/sit/"><link data-react-helmet="true" rel="alternate" href="https://sabiao.github.io/sit/" hreflang="en">
+<script data-react-helmet="true">function maybeInsertBanner(){window.__DOCUSAURUS_INSERT_BASEURL_BANNER&&insertBanner()}function insertBanner(){var n=document.getElementById("docusaurus-base-url-issue-banner-container");if(n){n.innerHTML='\n<div id="docusaurus-base-url-issue-banner" style="border: thick solid red; background-color: rgb(255, 230, 179); margin: 20px; padding: 20px; font-size: 20px;">\n   <p style="font-weight: bold; font-size: 30px;">Your Docusaurus site did not load properly.</p>\n   <p>A very common reason is a wrong site <a href="https://docusaurus.io/docs/docusaurus.config.js/#baseurl" style="font-weight: bold;">baseUrl configuration</a>.</p>\n   <p>Current configured baseUrl = <span style="font-weight: bold; color: red;">/sit/</span> </p>\n   <p>We suggest trying baseUrl = <span id="docusaurus-base-url-issue-banner-suggestion-container" style="font-weight: bold; color: green;"></span></p>\n</div>\n';var e=document.getElementById("docusaurus-base-url-issue-banner-suggestion-container"),s=window.location.pathname,r="/"===s.substr(-1)?s:s+"/";e.innerHTML=r}}window.__DOCUSAURUS_INSERT_BASEURL_BANNER=!0,document.addEventListener("DOMContentLoaded",maybeInsertBanner)</script><link rel="stylesheet" href="/sit/assets/css/styles.f0d806f8.css">
 <link rel="preload" href="/sit/assets/js/runtime~main.c5f37b6f.js" as="script">
 <link rel="preload" href="/sit/assets/js/main.03a31628.js" as="script">
 </head>
